authelia: forgot storage key. Renamed secret for encrypted values.

--- a/infrastructure/base/authelia/kustomization.yaml
+++ b/infrastructure/base/authelia/kustomization.yaml
@@ -3,7 +3,7 @@ kind: Kustomization
 resources:
   - manifest.yaml
 secretGenerator:
-  - name: smtp-authelia-secret
+  - name: values-authelia-secret
     namespace: authelia
     files:
       - values.yaml=values.enc.yaml
