--- a/infrastructure/base/authelia/values.enc.yaml
+++ b/infrastructure/base/authelia/values.enc.yaml
@@ -1,22 +1,23 @@
 configMap:
     notifier:
         smtp:
-            enabled: ENC[AES256_GCM,data:6h+BDQ==,iv:He28LmHYVr/asm5Ktu30F7u/Lfu5LLlWhW8C4NVxReM=,tag:yFznClUtQUI/vVSISfv5Uw==,type:bool]
-            address: ENC[AES256_GCM,data:JAfS8VAhdFOoDLiPlv54VR2pgHm8ycS2GyidNEFzCkoM8Q3X,iv:4hdaNKTiA5qBJ7gGq0pr78XzAnSm32dbqTDXFAYNoTg=,tag:W9jWEEgfnGXEd4BIrM9JkQ==,type:str]
-            username: ENC[AES256_GCM,data:eBK3APY9eL5aIiKOFMDTZBcACw==,iv:HlUvJvNBTZXDsVa5hx4bXQt/Rf6K+4LGOeoFPq6shrQ=,tag:fP1ryVW4Um+cdl7vKPrzXw==,type:str]
-            sender: ENC[AES256_GCM,data:sxIlZ37b8vPjWpuO8IwbQ+F+fA==,iv:/c9BLBesGjpgUUUySdB8H9Nteh3MSJcqa22nddswwXo=,tag:tBHHN0346zf7zpDL7qky1Q==,type:str]
+            enabled: ENC[AES256_GCM,data:TukAbg==,iv:4+HoCgzF14xl0knbe7MCULLjXeFxTwCfNhvOtVShVvc=,tag:T56S5JfD2jewTHigpaOnqw==,type:bool]
+            address: ENC[AES256_GCM,data:w4hbjLWJXyqXkr/oun6/Y+Q3f17/1yUe1q8/Pdkz3epmLKgH,iv:8ioOgB8YV7Yvz6hVsky8sK5+/gYvNy1NuHnkuVYuKWk=,tag:c4+a6Qr1F9uome9d+Je3bg==,type:str]
+            username: ENC[AES256_GCM,data:T/h8pYpgxXF6kUfWKVSsIjiGvg==,iv:JhBcdFvHhxhShlqoJMN4zMH/NTJg9db5YwODyMneztk=,tag:Yh4SJLNjuQkd3SBP5tqOcA==,type:str]
+            sender: ENC[AES256_GCM,data:kIgLpnQtIzNoH+oxz2u4EkdXMA==,iv:GW1VxonFiKdfMsC2BQPYAgz2CVN2E1jd7CYW9JChPYw=,tag:xD5i7TV7bfJVk721FEsuoQ==,type:str]
             password:
-                value: ENC[AES256_GCM,data:8knahZ5/1xH7srZu8aTzNoqK5ao=,iv:TidHsEqULb0p0emc0DArbAqd4plXJ4mLJjT8x0s2D9k=,tag:SMwX/aBUXt+bOSyIDb2PDQ==,type:str]
-    postgres:
-        enabled: ENC[AES256_GCM,data:SqjB2g==,iv:KbJr2NUcObZs8DSOg9rgbtDsawawjmSn9HrbkmIdPLo=,tag:GXGzxAvY9bPd5MnptPqWkw==,type:bool]
-        deploy: ENC[AES256_GCM,data:AVHUYyE=,iv:ga8nKPVR9foM5lbIgRsi19O6VCzPC/3vl3a11nw9QYg=,tag:FKkz+4C5ShZqewb/pj+6IQ==,type:bool]
-        address: ENC[AES256_GCM,data:meeC+BMGEjjgfSUUfc3XGhdegiqAsaFbDoa2OmTPaUg9FdFlKSjhtgB2sO8kOV3JJzwgse9jzf+CMCgDmiJRzeFf,iv:MYaF8jvYHjl0BQoZuieWGPVS+iPZWhzdooqXIlBrQcE=,tag:tLOEcy3vZXWNSJY/o04b1w==,type:str]
-        timeout: ENC[AES256_GCM,data:SqRHcXVPlngF,iv:9heQYjIcOVi7MGmqjkEjs5fSzknH8hbnSlvHJCrWl+A=,tag:ZgnbQyhH/8lFacbO82OBxw==,type:str]
-        database: ENC[AES256_GCM,data:TMZWiRH7Qpk=,iv:AS1Kr1sYgWYEM5i1ElpG2p1bslIza7xNUOaYB6gQnSM=,tag:4M3+gH3XfsDWxyutiwGI1g==,type:str]
-        schema: ENC[AES256_GCM,data:D6WaLDyg,iv:S4NAXqDsUPB1wCGN4pBZpuU/6ZmStlr3dDUYPuC7OYM=,tag:RkM4aORMLRZj2nT2yU09iQ==,type:str]
-        username: ENC[AES256_GCM,data:jdZb/H8scy8=,iv:Wl2fySLuw4ON6wnhz8VHebJxqkwqAJLlCroSX6XbdO0=,tag:Cz+IfYfyPnrVI3yfya7TJQ==,type:str]
-        password:
-            value: ENC[AES256_GCM,data:2mU7RsYEYF4wM7ZdJiTPLyFvDU84BGefpO5a7J8EZrKyQAsENCnDX89V,iv:SGlNpcu3kU71sm6mYCIR+BGvHczIM6NVdmnOJg+CvKA=,tag:mLoR2t48tM0zJwARhHZeuA==,type:str]
+                value: ENC[AES256_GCM,data:7+jYZxzWCKi1KI0EbPn1hxu2/E0=,iv:dNNPLvvDk2UI8VgthOrl/RNNogXUpgV8+WLCSXa5PeQ=,tag:Q+ZEXe9H3EGPNoJ0HWNXfw==,type:str]
+    storage:
+        postgres:
+            enabled: ENC[AES256_GCM,data:OlPFNw==,iv:JLH1Y5p3RIlYnbd92CB+9+UXtCpOj+v/rPa9XzqQtro=,tag:l3WbCLqXRXswSURWYzFcmA==,type:bool]
+            deploy: ENC[AES256_GCM,data:Lr/dYn8=,iv:uUVAHaFnuO6CWHDnUXsPhhug6MC1oe/Sk6L+97M5URc=,tag:WsvA6DsNghBa4qeYWMNcpw==,type:bool]
+            address: ENC[AES256_GCM,data:GCVFK2EDLZXnfBF3m4ZA1cUySNbakR3AiulQ+Jyz6eRMe2lTja2AdWOAOajqh9lra3tj5xn0i174caDc+85bdkUG,iv:vI69b8g4dFwr7d/hoPNFvpjogwNZmxHw9dJeYzPmXlo=,tag:ALXNo72lqTpqaYAgVtG+cA==,type:str]
+            timeout: ENC[AES256_GCM,data:1F2lHG5mLU5/,iv:tnf020YVzvst5FQ+txT9GTI6HXj+5FBfQgnG876b9cU=,tag:1HA2z7ooVvZ1ZrBhm49euQ==,type:str]
+            database: ENC[AES256_GCM,data:U9gNo/DCnEY=,iv:HVDX0+9+Z5Mb/nOpwLRvGeAMs/yFhRT2Zux2tvuw1j8=,tag:hFxLRQshYiJi1VGRhijXng==,type:str]
+            schema: ENC[AES256_GCM,data:UX+m5voT,iv:fGCN0UViL9IzgVKWZfhm2/q2AyIFpexXFPnydqrdck4=,tag:9W/dlkGpTRVF1abuGI9Duw==,type:str]
+            username: ENC[AES256_GCM,data:WLt360eehe4=,iv:onZ716XoyJFy0/YYZbPranjt7fL0W7rEFugzMGAxmZg=,tag:pyCAfAhWZXK6tcWyCiTstw==,type:str]
+            password:
+                value: ENC[AES256_GCM,data:utOBr/m/+epx2iO7wbmicbFtA5OyA+crgCYUbjWYGixhNBvHZjp22d0M,iv:GRs5K/Nzajdk69cyEwsGPLc7lBRS8zf+V5cDFIVPvDk=,tag:vNoK33RxGGxpt6jjtPzkgw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -26,14 +27,14 @@ sops:
         - recipient: age1epjlv060j8z57f7vm8jvwfl0zqz9wjtw0cga5vpgw0upwa0nsdrshdn3ku
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvYlpCRHMvTGlFbjY1bEtL
-            Q2dndElXdzg5a3g5T3pjT0x6UzRSb2NFckZVCmphOXZMSzI5VnEvd2dVSkhrRFo3
-            QjNWV2JSMEdXdFdaN0l5TDY5a0hJVlkKLS0tIGhJdDZqRnkxVUlibnBHek5ycVQ3
-            bE5DcUdBRS9hMTR6SThjbFZzaG9hU2MKt/oc0ELnoCxbdEKV+WMa4eCtipXn9/cd
-            EA0GAqepqV7PO/+eZ/24QEx4e9yBiIBpsrOHlOOA8HqiwqO8TId4DA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBZSG9DWStZWko3eEdQYi9i
+            OWMxR0piODN0L1ljcnFBRHB5MTdXQVA1aERjCkcwYVJEZy8vNVFDYUNWS2pWUXZO
+            TDVkVEJPZjZsVFgxTmZ5dWNKeDhCcUkKLS0tIGRPaC9DZFNPVjdrM1Y1Zi90SjNT
+            SGh1b0poY0ZBY1Q2M2p6QWxrQlN1VDQK8fmN5op2n+TqtJ8+I9TcxkcsYxpUWUnj
+            y78jn+XNUoYLFVu3j4K7KgVjEpRoc2Npqo0DOrvG0LUl8+h9PW36Ag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-04T08:00:26Z"
-    mac: ENC[AES256_GCM,data:jXz8dqqSBCzFOjpWUteuvlPyvHFcOB//cR/ZnXiwk9+9bCx3hBQcZ+uTphFGOWoersu4eWaojjRy9k0M3Ri5dPyMDziaMKWCU4r232PvKrnjBWH0rULD7X1pniK/tEKJlwRbpjrKg9bQX3DIqeqFC6XMZb97XIl8lmuRqbgmsWo=,iv:LhafGvnjvOSe7qxwH8gHYe3W2Ns/HPdjqPI4au2BwLg=,tag:mO7hQd1C2maTmP0OQNe2XQ==,type:str]
+    lastmodified: "2025-01-04T08:13:14Z"
+    mac: ENC[AES256_GCM,data:HCoxLbmvpGDAoBscZ71xBMRAAlAcDzbfwn1D39pELRnZv+19rJihm2Rt3TG5DrwRz466vGSrWRFoj7aLv+i1i2MqbwbpgynAJT2JPrEBTjMw91o9jBeu9vFCLkzr68TFY0em16LdW1FHOmtzjGbq9WDKVTZBB7ZW5UK7Ic4Y+Ow=,iv:mc5skI1DY+cvNaPNJOXGCW1vfey19hGdWqsokzibYfA=,tag:cY2uttQqH7hKwqgYzcIsRw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
