--- a/infrastructure/production/traefik/config/ingressConfig.yaml
+++ b/infrastructure/production/traefik/config/ingressConfig.yaml
@@ -12,8 +12,8 @@ spec:
     - match: Host(`traefik.lan.vandelocht.uk`)
       kind: Rule
       middlewares:
-        - name: traefik-dashboard-basicauth
-          namespace: traefik
+        - name: forwardauth-authelia
+          namespace: authelia
       services:
         - name: api@internal
           kind: TraefikService
