authelia: set resource limits and requests

--- a/infrastructure/base/authelia/manifest.yaml
+++ b/infrastructure/base/authelia/manifest.yaml
@@ -38,6 +38,13 @@ spec:
         namespace: authelia
       interval: 12h
   values:
+    resources:
+      limits:
+        cpu: 100m
+        memory: 125Mi
+      requests:
+        cpu: 50m
+        memory: 50Mi
     ingress:
       enabled: true
       tls:
