--- a/infrastructure/base/cloudnative-pg/manifest.yaml
+++ b/infrastructure/base/cloudnative-pg/manifest.yaml
@@ -38,6 +38,13 @@ spec:
         namespace: cloudnative-pg
       interval: 12h
   values:
+    resources:
+      limits:
+        cpu: 100m
+        memory: 200Mi
+      requests:
+        cpu: 100m
+        memory: 100Mi
     monitoring:
       podMonitorEnabled: true
       grafanaDashboard:
