--- a/infrastructure/base/metallb/manifest.yaml
+++ b/infrastructure/base/metallb/manifest.yaml
@@ -53,3 +53,20 @@ spec:
       # required when " .Values.prometheus.rbacPrometheus == true " and " .Values.prometheus.podMonitor.enabled=true or prometheus.serviceMonitor.enabled=true "
       serviceAccount: kube-prometheus-stack-prometheus
       namespace: monitoring
+    controller:
+      resources:
+        requests:
+          cpu: 100m
+          memory: 100Mi
+        limits:
+          cpu: 100m
+          memory: 100Mi
+    speaker:
+      resources:
+        requests:
+          cpu: 100m
+          memory: 120Mi
+        limits:
+          cpu: 100m
+          memory: 150Mi
+
