Added namespace for renovate

--- a/renovate/renovate-secret.yaml
+++ b/renovate/renovate-secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: renovate-env
+    namespace: renovate
 type: Opaque
 stringData:
     RENOVATE_AUTODISCOVER: ENC[AES256_GCM,data:JpCF66M=,iv:FTFCBVwVpoeb1oPS+FM2/bMda0f1yFdaTOGmb36WHAw=,tag:dePYWXPS/jm47tHFknOZXg==,type:str]
