--- a/renovate/manifest.yaml
+++ b/renovate/manifest.yaml
@@ -1,7 +1,13 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: renovate
+---
 apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: renovate
+  namespace: renovate
 spec:
   schedule: '@hourly'
   concurrencyPolicy: Forbid
