--- a/apps/base/forgejo/manifest.yaml
+++ b/apps/base/forgejo/manifest.yaml
@@ -33,7 +33,7 @@ spec:
   chart:
     spec:
       chart: forgejo
-      version: "10.1.x"
+      version: "10.1.2"
       sourceRef:
         kind: HelmRepository
         name: forgejo
