--- a/infrastructure/base/ceph-csi-rbd/manifest.yaml
+++ b/infrastructure/base/ceph-csi-rbd/manifest.yaml
@@ -19,6 +19,14 @@ metadata:
   namespace: ceph-csi-rbd
 spec:
   interval: 5m
+  install:
+    crds: Create
+    remediation:
+      retries: 3
+  upgrade:
+    crds: CreateReplace
+    remediation:
+      retries: 3
   chart:
     spec:
       chart: ceph-csi-rbd
