--- a/infrastructure/base/traefik/manifest.yaml
+++ b/infrastructure/base/traefik/manifest.yaml
@@ -69,7 +69,7 @@ spec:
       #     default: true
       #   exposedPort: 8082
       #   protocol: TCP
-          
+
     ingressRoute:
       dashboard:
         enabled: false
@@ -97,46 +97,46 @@ spec:
       # loadBalancerSourceRanges: []
       # externalIPs: []
 
-    metrics:
-      addInternals: true
-      prometheus:
-        enabled: true
-        addEntryPointsLabels: true
-        addServicesLabels: true
-        addRoutersLabels: true
-        service:
-          enabled: true
-        disableAPICheck: true
-        serviceMonitor:
-          enabled: true
-          # namespace: monitoring
-          additionalLabels:
-            release: kube-prometheus-stack
-          metricRelabelings:
-            - sourceLabels: [__name__]
-              separator: ;
-              regex: ^fluentd_output_status_buffer_(oldest|newest)_.+
-              replacement: $1
-              action: drop
-          relabelings:
-            - sourceLabels: [__meta_kubernetes_pod_node_name]
-              separator: ;
-              regex: ^(.*)$
-              targetLabel: nodename
-              replacement: $1
-              action: replace
-          jobLabel: traefik
-          interval: 30s
-          honorLabels: true
-        prometheusRule:
-          enabled: true
-          rules:
-            - alert: TraefikDown
-              expr: up{job="traefik"} == 0
-              for: 5m
-              labels:
-                context: traefik
-                severity: warning
-              annotations:
-                summary: "Traefik Down"
-                description: "{{ $labels.pod }} on {{ $labels.nodename }} is down"
+    # metrics:
+    #   addInternals: true
+    #   prometheus:
+    #     enabled: true
+    #     addEntryPointsLabels: true
+    #     addServicesLabels: true
+    #     addRoutersLabels: true
+    #     service:
+    #       enabled: true
+    #     disableAPICheck: true
+    #     serviceMonitor:
+    #       enabled: true
+    #       # namespace: monitoring
+    #       additionalLabels:
+    #         release: kube-prometheus-stack
+    #       metricRelabelings:
+    #         - sourceLabels: [__name__]
+    #           separator: ;
+    #           regex: ^fluentd_output_status_buffer_(oldest|newest)_.+
+    #           replacement: $1
+    #           action: drop
+    #       relabelings:
+    #         - sourceLabels: [__meta_kubernetes_pod_node_name]
+    #           separator: ;
+    #           regex: ^(.*)$
+    #           targetLabel: nodename
+    #           replacement: $1
+    #           action: replace
+    #       jobLabel: traefik
+    #       interval: 30s
+    #       honorLabels: true
+    #     prometheusRule:
+    #       enabled: true
+    #       rules:
+    #         - alert: TraefikDown
+    #           expr: up{job="traefik"} == 0
+    #           for: 5m
+    #           labels:
+    #             context: traefik
+    #             severity: warning
+    #           annotations:
+    #             summary: "Traefik Down"
+    #             description: "{{ $labels.pod }} on {{ $labels.nodename }} is down"
