--- a/infrastructure/base/ceph-csi-rbd/manifest.yaml
+++ b/infrastructure/base/ceph-csi-rbd/manifest.yaml
@@ -61,6 +61,8 @@ apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
   name: csi-rbd-sc
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
 provisioner: rbd.csi.ceph.com
 parameters:
   clusterID: "fdef4f57-7ea2-4931-ad44-b347bbcc8141"
