--- a/clusters/staging/infrastructure/network/traefik.yaml
+++ b/clusters/staging/infrastructure/network/traefik.yaml
@@ -20,27 +20,27 @@ spec:
   path: ./infrastructure/production/traefik
   prune: true
   wait: true
-# ---
-# apiVersion: kustomize.toolkit.fluxcd.io/v1
-# kind: Kustomization
-# metadata:
-#   name: traefik-config
-#   namespace: flux-system
-# spec:
-#   decryption:
-#     provider: sops
-#     secretRef:
-#       name: sops-age
-#   dependsOn:
-#     - name: metallb-config
-#     - name: traefik
-#     - name: cert-manager-config
-#   interval: 1h
-#   retryInterval: 1m
-#   timeout: 5m
-#   sourceRef:
-#     kind: GitRepository
-#     name: flux-system
-#   path: ./infrastructure/production/traefik/config
-#   prune: true
-#   wait: true
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: traefik-config
+  namespace: flux-system
+spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
+  dependsOn:
+    - name: metallb-config
+    - name: traefik
+    - name: cert-manager-config
+  interval: 1h
+  retryInterval: 1m
+  timeout: 5m
+  sourceRef:
+    kind: GitRepository
+    name: flux-system
+  path: ./infrastructure/production/traefik/config
+  prune: true
+  wait: true
