--- a/clusters/staging/monitoring.yaml
+++ b/clusters/staging/monitoring.yaml
@@ -6,7 +6,7 @@ metadata:
   namespace: flux-system
 spec:
   dependsOn:
-    - name: longhorn-config
+    - name: ceph-csi-rbd
   decryption:
     provider: sops
     secretRef:
