--- a/monitoring/controllers/loki-stack/release.yaml
+++ b/monitoring/controllers/loki-stack/release.yaml
@@ -3,7 +3,16 @@ kind: HelmRelease
 metadata:
   name: loki-stack
 spec:
-  interval: 5m
+  timeout: 15m
+  interval: 30m
+  install:
+    crds: Create
+    remediation:
+      retries: 3
+  upgrade:
+    crds: CreateReplace
+    remediation:
+      retries: 3
   dependsOn:
     - name: kube-prometheus-stack
   chart:
