--- a/infrastructure/production/traefik/config/ingressConfig.yaml
+++ b/infrastructure/production/traefik/config/ingressConfig.yaml
@@ -3,7 +3,7 @@ kind: IngressRoute
 metadata:
   name: traefik-dashboard
   namespace: traefik
-  annotations: 
+  annotations:
     kubernetes.io/ingress.class: traefik-external
 spec:
   entryPoints:
@@ -12,8 +12,8 @@ spec:
     - match: Host(`traefik.lan.vandelocht.uk`)
       kind: Rule
       middlewares:
-        - name: forwardauth-authelia
-          namespace: authelia
+        - name: traefik-dashboard-basicauth
+          namespace: traefik
       services:
         - name: api@internal
           kind: TraefikService
@@ -32,7 +32,7 @@ spec:
     kind: ClusterIssuer
   commonName: "traefik.lan.vandelocht.uk"
   dnsNames:
-  - "traefik.lan.vandelocht.uk"
+    - "traefik.lan.vandelocht.uk"
 ---
 apiVersion: traefik.io/v1alpha1
 kind: Middleware
