cloudnative-pg: reenabled metrics

--- a/infrastructure/base/cloudnative-pg/manifest.yaml
+++ b/infrastructure/base/cloudnative-pg/manifest.yaml
@@ -45,8 +45,8 @@ spec:
       requests:
         cpu: 100m
         memory: 100Mi
-    # monitoring:
-    #   podMonitorEnabled: true
-    #   grafanaDashboard:
-    #     create: true
-    #     namespace: monitoring
+    monitoring:
+      podMonitorEnabled: true
+      grafanaDashboard:
+        create: true
+        namespace: monitoring
