--- a/clusters/staging/infrastructure/persistence/kustomization.yaml
+++ b/clusters/staging/infrastructure/persistence/kustomization.yaml
@@ -1,5 +1,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- ceph-csi-rbd.yaml
-- cloudnative-pg.yaml
+  - ceph-csi-rbd.yaml
+  - cloudnative-pg.yaml
+  - velero.yaml
