--- a/infrastructure/production/velero/config/volumesnapshotclass.yaml
+++ b/infrastructure/production/velero/config/volumesnapshotclass.yaml
@@ -1,11 +1,11 @@
 kind: VolumeSnapshotClass
 apiVersion: snapshot.storage.k8s.io/v1
 metadata:
-  name: longhorn-snapshot-vsc
+  name: csi-rbd-snapclass
   namespace: velero
   labels:
     velero.io/csi-volumesnapshot-class: "true"
-driver: driver.longhorn.io
+driver: rbd.csi.ceph.com
 deletionPolicy: Delete
-parameters:
-  type: bak
+# parameters:
+#   type: bak
