Changed chart name.

--- a/infrastructure/base/smb-csi/manifest.yaml
+++ b/infrastructure/base/smb-csi/manifest.yaml
@@ -36,7 +36,7 @@ spec:
       retries: 3
   chart:
     spec:
-      chart: smb-csi
+      chart: csi-driver-smb
       sourceRef:
         kind: HelmRepository
         name: smb-csi
