Modified smb csi

--- a/infrastructure/base/smb-csi/manifest.yaml
+++ b/infrastructure/base/smb-csi/manifest.yaml
@@ -54,9 +54,14 @@ parameters:
   csi.storage.k8s.io/node-stage-secret-name: csi-smb-secret
   csi.storage.k8s.io/node-stage-secret-namespace: smb-csi
 reclaimPolicy: Retain
+volumeBindingMode: Immediate
 allowVolumeExpansion: true
 mountOptions:
   - dir_mode=0777
   - file_mode=0777
   - uid=1000
   - gid=1000
+  - noperm
+  - mfsymlinks
+  - cache=strict
+  - noserverinfo # recuired to prevent date corruption
