--- a/apps/base/immich/manifest.yaml
+++ b/apps/base/immich/manifest.yaml
@@ -51,6 +51,7 @@ spec:
       DB_HOSTNAME: immich-postgres-cluster-rw
       DB_USERNAME: immich
       DB_DATABASE_NAME: immich
+      DB_VECTOR_EXTENSION: pgvector
   valuesFrom:
     - kind: Secret
       name: values-immich-secret
