--- a/infrastructure/base/ceph-csi-rbd/manifest.yaml
+++ b/infrastructure/base/ceph-csi-rbd/manifest.yaml
@@ -72,5 +72,7 @@ parameters:
   csi.storage.k8s.io/provisioner-secret-namespace: ceph-csi-rbd
   csi.storage.k8s.io/node-stage-secret-name: csi-rbd-secret
   csi.storage.k8s.io/node-stage-secret-namespace: ceph-csi-rbd
+  csi.storage.k8s.io/controller-expand-secret-name: csi-rbd-secret
+csi.storage.k8s.io/controller-expand-secret-namespace: ceph-csi-rbd
 reclaimPolicy: Delete
 allowVolumeExpansion: true
