--- a/infrastructure/base/unbound/manifest.yaml
+++ b/infrastructure/base/unbound/manifest.yaml
@@ -74,7 +74,7 @@ spec:
               ip: "192.168.178.92"
       healthz:
         image:
-          repository: bopjiang/google_containers_exechealthz
+          repository: gcr.io/bopjiang/google_containers_exechealthz
           tag: "1.0"
           pullPolicy: IfNotPresent
         resources:
